--- a/App.css
+++ b/App.css
@@ -60,3 +60,13 @@
     height: 400px;
     background-color: lightgrey;
 }
+
+.login {
+    padding: 0 20px;
+    width: 100px;
+    cursor: pointer;
+}
+
+.filter {
+    display: flex;
+}
