--- a/App.css
+++ b/App.css
@@ -2,15 +2,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.header:hover{
-    cursor: pointer;
-    border: 1px solid black;
+    margin: 12px;
+    padding-right: 17px;
 }
 
 .logo{
-    width: 100px;
+    width: 80px;
 }
 
 
@@ -18,26 +15,27 @@
     font-size: 24px;
     display: flex;
     list-style-type: none;
+    align-items: center;
 }
 
 .nav-items > ul > li {
     padding: 10px;
-    margin: 10px;   
+    margin: 10px;  
+    cursor: pointer; 
+}
+
+.cityHeading {
+    margin: 12px;
+}
+
+.cityName{
+    color: lightcoral;
 }
 
 .res-card{
     width: 200px;
     padding: 5px;
-    margin: 5px;
-}
-
-.res-card:hover{
-    cursor: pointer;
-    border: 1px solid black;
-}
-
-.search{
-    padding: 10px;
+    margin: 10px;
 }
 
 .res-logo{
@@ -67,11 +65,30 @@
 }
 
 .login {
-    padding: 0 20px;
-    width: 100px;
-    cursor: pointer;
+    width: 80px;
+    height: 50px;
+    font-size: large;
 }
 
 .filter {
     display: flex;
+    justify-content: space-between;
+    margin: 12px;
+    padding-right: 17px;
+}
+
+.filter-btn-1 {
+    height: 40px;
+    width: 200px;
+    font-size:medium;
+    cursor: pointer;
+    border: 2px solid black;
+    border-radius: 5%;
+}
+
+.search-box {
+    height: 30px;
+    width: 500px;
+    border: 2px solid lightcoral;
+    border-radius: 5%;
 }
