--- a/App.css
+++ b/App.css
@@ -97,3 +97,8 @@
     border: 2px solid lightcoral;
     border-radius: 5%;
 }
+
+.user-card{
+    display: inline-block;
+    border: 1px solid lightcoral;
+}
